--- a/package.json
+++ b/package.json
@@ -17,8 +17,5 @@
    "bugs": {
       "url": "https://github.com/camiloconrado/hello-web/issues"
    },
-   "homepage": "https://github.com/camiloconrado/hello-web#readme",
-   "dependencies": {
-      "express": "^5.1.0"
-   }
+   "homepage": "https://github.com/camiloconrado/hello-web#readme"
 }
