--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
    "bugs": {
       "url": "https://github.com/camiloconrado/hello-web/issues"
    },
-   "homepage": "https://github.com/camiloconrado/hello-web#readme"
+   "homepage": "https://github.com/camiloconrado/hello-web#readme",
+   "dependencies": {
+      "express": "^5.1.0"
+   }
 }
